package com.sunrise.clinic.platform.error;

/** Thrown when a requested entity does not exist. The web layer maps it to HTTP 404. */
public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
