%% Sunrise Dental Clinic - class design: 6-platform
%% Source of truth: modular/docs/class-diagram.md

classDiagram
    direction TB

    namespace platform_data {
        class Repository~T, ID~ {
            <<interface>>
            +save(entity) T
            +findById(id) Optional~T~
            +findAll() List~T~
            +deleteById(id) void
            +count() long
        }
        class JdbcDao~T~ {
            <<abstract>>
            #db : Database
            #queryOne(sql, binder) Optional~T~
            #queryList(sql, binder) List~T~
            #map(rs)* T
        }
        class TransactionRunner {
            <<interface>>
            +inTransaction(work)* T
        }
    }

    namespace platform_db {
        class Database {
            -instance : Database$
            -pool : BlockingQueue~Connection~
            -size : int
            +borrow() PooledConnection
            +close() void
        }
        class PooledConnection {
            -delegate : Connection
            +close() void
        }
    }

    namespace platform_web {
        class BaseServlet {
            <<abstract>>
            #app() AppContext
            #writeJson(res, status, value) void
            #readBody(req) Map~String, Object~
            #handle(res, endpoint) void
        }
        class PageServlet {
            <<abstract>>
            #render(req, res, view) void
        }
    }

    namespace platform_di {
        class AppContext {
            -config : AppConfig
            -database : Database
            +appointmentService() AppointmentService
            +billingService() BillingService
            +authService() AuthService
            +close() void
        }
    }

    namespace platform_json {
        class Json {
            +write(value)$ String
            +parseObject(text)$ Map~String, Object~
        }
    }

    namespace platform_error {
        class ResourceNotFoundException
        class SlotUnavailableException
        class DataAccessException
        class ErrorResponse {
            <<record>>
            +errorCode : String
            +message : String
        }
    }

    Repository~T, ID~ <|.. JdbcDao~T~ : implements
    JdbcDao~T~ --> "1" Database : borrows from
    Database *-- "0..*" PooledConnection : lends
    BaseServlet <|-- PageServlet
    BaseServlet --> "1" AppContext
    BaseServlet ..> Json : serialises with
    BaseServlet ..> ErrorResponse : on failure
    AppContext *-- "1" Database : owns
